Source/WebKit/WebProcess/Network/WebSocketChannel.cpp
@@ -51,7 +51,7 @@ Ref<WebSocketChannel> WebSocketChannel::create(WebPageProxyIdentifier webPagePro
 void WebSocketChannel::notifySendFrame(WebSocketFrame::OpCode opCode, const uint8_t* data, size_t length)
 {
     WebSocketFrame frame(opCode, true, false, true, data, length);
-    m_inspector.didSendWebSocketFrame(m_document.get(), frame);
+    m_inspector.didSendWebSocketFrame(frame);
 }
 
 NetworkSendQueue WebSocketChannel::createMessageQueue(Document& document, WebSocketChannel& channel)
@@ -116,7 +116,7 @@ WebSocketChannel::ConnectStatus WebSocketChannel::connect(const URL& url, const 
     if (request->url() != url && m_client)
         m_client->didUpgradeURL();
 
-    m_inspector.didCreateWebSocket(m_document.get(), url);
+    m_inspector.didCreateWebSocket(url);
     m_url = request->url();
     MessageSender::send(Messages::NetworkConnectionToWebProcess::CreateSocketChannel { *request, protocol, m_identifier, m_webPageProxyID, m_document->clientOrigin(), WebProcess::singleton().hadMainFrameMainResourcePrivateRelayed() });
     return ConnectStatus::OK;
@@ -208,7 +208,7 @@ void WebSocketChannel::close(int code, const String& reason)
     ASSERT(code >= 0 || code == WebCore::WebSocketChannel::CloseEventCodeNotSpecified);
 
     WebSocketFrame closingFrame(WebSocketFrame::OpCodeClose, true, false, true);
-    m_inspector.didSendWebSocketFrame(m_document.get(), closingFrame);
+    m_inspector.didSendWebSocketFrame(closingFrame);
 
     MessageSender::send(Messages::NetworkSocketChannel::Close { code, reason });
 }
@@ -220,7 +220,7 @@ void WebSocketChannel::fail(const String& reason)
 
     logErrorMessage(reason);
     if (m_client)
-        m_client->didReceiveMessageError();
+        m_client->didReceiveMessageError(reason);
 
     if (m_isClosing)
         return;
@@ -235,7 +235,7 @@ void WebSocketChannel::disconnect()
     m_document = nullptr;
     m_messageQueue.clear();
 
-    m_inspector.didCloseWebSocket(m_document.get());
+    m_inspector.didCloseWebSocket();
 
     MessageSender::send(Messages::NetworkSocketChannel::Close { WebCore::WebSocketChannel::CloseEventCodeGoingAway, { } });
 }
@@ -253,24 +253,6 @@ void WebSocketChannel::didConnect(String&& subprotocol, String&& extensions)
     m_client->didConnect();
 }
 
-static inline WebSocketFrame createWebSocketFrameForWebInspector(const uint8_t* data, size_t length, WebSocketFrame::OpCode opCode)
-{
-    // This is an approximation since frames can be merged on a single message.
-    WebSocketFrame frame;
-    frame.opCode = opCode;
-    frame.masked = false;
-    frame.payload = data;
-    frame.payloadLength = length;
-
-    // WebInspector does not use them.
-    frame.final = false;
-    frame.compress = false;
-    frame.reserved2 = false;
-    frame.reserved3 = false;
-
-    return frame;
-}
-
 void WebSocketChannel::didReceiveText(String&& message)
 {
     if (m_isClosing)
@@ -278,9 +260,6 @@ void WebSocketChannel::didReceiveText(String&& message)
 
     if (!m_client)
         return;
-
-    auto utf8Message = message.utf8();
-    m_inspector.didReceiveWebSocketFrame(m_document.get(), createWebSocketFrameForWebInspector(utf8Message.dataAsUInt8Ptr(), utf8Message.length(), WebSocketFrame::OpCode::OpCodeText));
 
     m_client->didReceiveMessage(message);
 }
@@ -293,8 +272,6 @@ void WebSocketChannel::didReceiveBinaryData(IPC::DataReference&& data)
     if (!m_client)
         return;
 
-    m_inspector.didReceiveWebSocketFrame(m_document.get(), createWebSocketFrameForWebInspector(data.data(), data.size(), WebSocketFrame::OpCode::OpCodeBinary));
-
     m_client->didReceiveBinaryData({ data });
 }
 
@@ -302,10 +279,6 @@ void WebSocketChannel::didClose(unsigned short code, String&& reason)
 {
     if (!m_client)
         return;
-
-    WebSocketFrame closingFrame(WebSocketFrame::OpCodeClose, true, false, false);
-    m_inspector.didReceiveWebSocketFrame(m_document.get(), closingFrame);
-    m_inspector.didCloseWebSocket(m_document.get());
 
     // An attempt to send closing handshake may fail, which will get the channel closed and dereferenced.
     Ref protectedThis { *this };
@@ -336,7 +309,7 @@ void WebSocketChannel::didReceiveMessageError(String&& errorMessage)
         return;
 
     logErrorMessage(errorMessage);
-    m_client->didReceiveMessageError();
+    m_client->didReceiveMessageError(errorMessage);
 }
 
 void WebSocketChannel::networkProcessCrashed()
@@ -354,13 +327,13 @@ void WebSocketChannel::resume()
 
 void WebSocketChannel::didSendHandshakeRequest(ResourceRequest&& request)
 {
-    m_inspector.willSendWebSocketHandshakeRequest(m_document.get(), request);
+    m_inspector.willSendWebSocketHandshakeRequest(request);
     m_handshakeRequest = WTFMove(request);
 }
 
 void WebSocketChannel::didReceiveHandshakeResponse(ResourceResponse&& response)
 {
-    m_inspector.didReceiveWebSocketHandshakeResponse(m_document.get(), response);
+    m_inspector.didReceiveWebSocketHandshakeResponse(response);
     m_handshakeResponse = WTFMove(response);
 }
 
